# yadbil

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  data_parsing.ipynb  get_tg_ch_name.py  pyproject.toml  requirements.txt  setup.py  streamlit.py
.github/workflows/: ruff.yaml
configs/: parse_telegram.json  pipeline.yml  pipeline_sync.yml  ui.yml
examples/: run_tg_pipe_sync.py
examples/pinecone_lambda_serverless_gpt/: .env_example  README.md  pipeline.yml  requirements.txt  run_pipeline.sh  serverless.yml
examples/pinecone_lambda_serverless_gpt/lambdas/: pinecall.py
scripts/: run_pipeline.sh  tg_scraping.sh
src/: data.py  data_utils.py  processing.py  st_utils.py
src/data/: telegram.py
src/graph/: __init__.py  graph.py  visualization.py
src/notebooks/: data_parsing.ipynb
src/ui/: graph.py
yadbil/data/: processing.py  telegram.py  utils.py
yadbil/data/filtering/: __init__.py  filter.py
yadbil/data/mining/telegram/: __init__.py  channels_info.py  config.py  processing.py  scraping.py
yadbil/data/mining/telegram/utils/: base.py  message_processing.py  telegram_client.py
yadbil/data/processing/: __init__.py
yadbil/data/processing/text/: idf.py  processing.py
yadbil/data/processing/text/utils/: language.py  load.py  regexps.py  stemmer.py  stopwords.py
yadbil/data/source/telegram/processing/: manual_dump.py  scraped.py
yadbil/data/source/telegram/scraping/: channels_info.py  config.py  scraping.py  telegram_client.py  utils.py
yadbil/data/text/: language.py  processing.py  stemmer.py
yadbil/graph/: __init__.py  algorithm.py  io.py  visualization.py
yadbil/notebooks/: bm25.ipynb  data_parsing.ipynb  test_minhash.ipynb
yadbil/pipeline/: config.py  creds.py  pipeline.py  utils.py
yadbil/recsys/graph/: __init__.py  graph.py
yadbil/run/: pipeline.py
yadbil/search/: __init__.py  base.py  bm25.py  fasttext.py  minhash.py  openai.py  pinecone.py  word2vec.py
yadbil/ui/: bm25.py  fasttext.py  graph.py  word2vec.py
yadbil/ui/utils/: search.py
yadbil/utils/: data_handling.py  logger.py  retry.py  st_utils.py
yadbil/utils/telegram/: get_tg_ch_name.py
