[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yadbil"]

[project]
name = "yadbil"
version = "0.0.1"
# TODO: split deps on dev and use
# or add optional deps as below
dependencies = [
    "lxml==5.2.2",
    "nltk==3.8.1",
    "numpy==1.26.2",
    "networkx==3.2.1",
    "plotly==5.18.0",
    "streamlit==1.36.0",
    "ipython==8.17.2",
    "ruff==0.5.6"
]
requires-python = ">=3.9"
authors = [
    { name = "Vasilii Salikov", email = "vasilii.salikov.work@gmail.com" },
]
maintainers = [
    { name = "Vasilii Salikov", email = "vasilii.salikov.work@gmail.com" },
]
description = "Yet another database in learning"
readme = "README.md"
license = { file = "LICENSE" }

# example
# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]
